--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
     "reactjs-flip-card": "^2.0.3",
+    "sharp": "^0.33.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
