--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
+    "micromatch": "^4.0.8",
     "next": "14.0.4",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
